# bbc_meet_spotify

./: .gitattributes  .gitignore  LICENSE  README.md  bbc_meet_spotify.py  bbc_playlists.toml  config_example.toml  pyproject.toml  requirements.txt  test_bbc_sounds.py
.github/workflows/: test.yml
src/bbc_meet_spotify/: __init__.py  bbc_sounds.py  console.py  music.py  playlist_parsing.py  songs.py  spotify.py
test_resources/: bbc_sounds_6music.html
tests/: conftest.py  test_bbc_sounds.py  test_console.py
tests/resources/: 6music_playlist.html  bbc_sounds_6music.html  dance-party-2021_1.html  dance-party-2021_2.html  dance-party-2021_no-songs.html  dance-party-2021_standalone.html  dance_party_2021_test.toml  test_playlists.toml
