[tool.poetry]
name = "bbc_meet_spotify"
version = "0.1.0"
description = "Scrapes BBC sounds playlists and adds them to a spotify playlist"
authors = ["Stef Piatek <stef.piatek@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stefpiatek/bbc_meet_spotify"
repository = "https://github.com/stefpiatek/bbc_meet_spotify"
keywords = ["bbc sounds", "spotify"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.2.1"
loguru = "^0.5.0"
spotipy = "^2.12.0"
beautifulsoup4 = "^4.9.1"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bbc-meet-spotify = "bbc_meet_spotify.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
